fixed styles on iphones

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -154,7 +154,7 @@ footer,
     max-width: 700px;
     @media (max-width: $screen-xs) {
        font-size: 12px;
-       line-height: 1;
+       line-height: 1.5;
     }
     a{
         color: white;
